--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rollup/plugin-commonjs": "^28.0.0",
     "@types/pdfjs-dist": "^2.10.378",
     "antd": "^5.21.2",
     "axios": "^1.7.7",
